# exonum-kickstart

./: Cargo.toml  make_config.sh  readme.md  run.sh  template.toml
src/: lib.rs  main.rs  service.rs
src/api/: mod.rs  storage.rs
src/blockchain/: errors.rs  schema.rs  transactions.rs
src/proto/: mod.rs  project_name.proto
tests/: api.rs
